--- a/readme.adoc
+++ b/readme.adoc
@@ -6,3 +6,9 @@ Concrete type definitions for the I/O types used by the Softask REST API.
 
 All types implement the https://github.com/francoispqt/gojay[gojay] JSON
 interfaces for decoding/encoding.
+
+.Dependencies
+--
+* https://github.com/francoispqt/gojay[gojay]
+* https://github.com/softask-app/lib-go-token[lib-go-token]
+--
