--- a/readme.adoc
+++ b/readme.adoc
@@ -7,8 +7,13 @@ Concrete type definitions for the I/O types used by the Softask REST API.
 All types implement the https://github.com/francoispqt/gojay[gojay] JSON
 interfaces for decoding/encoding.
 
-.Dependencies
---
+== Dependencies
+
+=== Runtime
+
 * https://github.com/francoispqt/gojay[gojay]
 * https://github.com/softask-app/lib-go-token[lib-go-token]
---
+
+=== Test
+
+* https://github.com/smartystreets/goconvey[goconvey]
